--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Meu Classify",
   "short_name": "Classify",
-  "start_url": "https://teddyws1.github.io/Classify/",
+  "start_url": "https://teddyws1.github.io/Classify_ia/",
   "display": "standalone",
   "background_color": "#000",
   "theme_color": "#000000",
