--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,23 @@
 {
   "name": "Classify IA",
   "short_name": "Classify",
-  "start_url": "/Classify_ia/",
+  "start_url": "/Classify_ia/index.html",
+  "scope": "/Classify_ia/",
   "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#f59e0b",
   "icons": [
     {
-      "src": "/Classify_ia/icon-192.png",
+      "src": "https://i.postimg.cc/52Tt63Vn/photo-2026-01-30-18-43-57.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/Classify_ia/icon-512.png",
+      "src": "https://i.postimg.cc/52Tt63Vn/photo-2026-01-30-18-43-57.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  ]
 }
